Fix scrollbar positioning
Scrollbar now shows up at the edge of the page, as part of the main
container element.

--- a/styles.css
+++ b/styles.css
@@ -35,16 +35,18 @@ header #add-book {
 .main-container {
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
+    max-width: 1200px;
+    overflow-y: auto;
 }
 
 #library {
-    max-width: 1200px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     gap: 24px;
     padding: 24px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     height: calc(100vh - 144px);
 }
 
@@ -117,10 +119,9 @@ header #add-book {
 
 dialog:open {
     margin: auto;
-    padding: 36px;
+    padding: 24px;
     border-radius: 18px;
     border: none;
-    /* box-shadow: 0px 0px 2px 2px black; */
 }
 
 form {
@@ -144,7 +145,4 @@ form {
     font-size: 1.1rem;
     padding: 6px 12px;
     margin-left: 12px;
-}
-
-dialog #book-title {
 }
